# Narrative-Compiler-Framework

./: CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md  limitations.md
examples/: basic_usage.py  marketing_audit_demo.py
examples/sample_outputs/: README.md  sample_healthy_company.json  sample_struggling_company.json  sample_validation_failure.json
scripts/: verify_install.py
src/ncf/: __init__.py
src/ncf/core/: dag.py  node.py  orchestrator.py  provenance.py
src/ncf/knowledge_graph/: __init__.py
src/ncf/layers/: __init__.py  feature.py  llm_reader.py  llm_writer.py  semantic.py  validation.py
src/ncf/skills/: __init__.py
src/ncf/skills/marketing_audit/: __init__.py  features.py  pipeline.py  prompts.py  sample_data.py  schema.py  semantics.py  validation.py
src/ncf/utils/: adapters.py  llm_provider.py
tests/: __init__.py  test_end_to_end.py  test_feature_layer.py  test_gemini_provider.py  test_marketing_audit.py  test_semantic_layer.py  test_validation_layer.py
