[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narrative-compiler-framework"
version = "1.0.0"
description = "Deterministic data-to-text architecture for enterprise document preparation"
readme = "README.md"
authors = [
    {name = "Satta Abraham", email = "satta@example.com"}
]
license = {text = "CC-BY-4.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["nlg", "data-to-text", "llm", "document-generation", "enterprise"]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "jsonlogic-py>=1.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]
kg = [
    "rdflib>=7.0.0",
    "sparqlwrapper>=2.0.0",
]
all = [
    "narrative-compiler-framework[dev,kg]",
]

[project.urls]
Homepage = "https://github.com/Satta-Techless/Narrative-Compiler-Framework"
Repository = "https://github.com/Satta-Techless/Narrative-Compiler-Framework"
Documentation = "https://github.com/Satta-Techless/Narrative-Compiler-Framework/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/ncf --cov-report=term-missing"
